--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,21 @@
 .domain-container {
   padding: 5px 10px;
 }
-.heading, .subheading {
+.domain-container h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.heading {
   text-align: center;
+  margin: 0 auto;
+  display: flex;
 }
 .row {
   max-width: 1000px;
+}
+.search-bar {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
 }
