--- a/styles.css
+++ b/styles.css
@@ -62,8 +62,19 @@ body {
   width: 100px;
   padding: 10px;
   position: relative;
-  right: 0;
+  right: 30px;
+  float: right;
+  bottom: 30px;
+  background-color: white;
+  border: #811b54 1px solid;
+  color: #811b54;
+  border-radius: 10px;
 }
+.originalDomains .domain-container .contact-btn:hover {
+  background-color: #811b54;
+  color: white;
+}
+
 
 @media screen and (max-width: 450px) {
   .domain-container h3{
