--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,9 @@ body {
 .search-bar {
   width: 100%;
   text-align: left;
+  padding: 6px 12px;
+  border-radius: 8px;
+  border: grey solid 1px;
 }
 
 .container {
@@ -92,7 +95,7 @@ body {
   .heading h3 {
     font-size: 30px;
   }
-  .search-bar, .form-control {
+  input.search-bar {
     height: 100px !important;
     font-size: 40px !important;
   }
