--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ body {
 }
 
 
-@media screen and (max-width: 450px) {
+@media (max-width: 450px) {
   .domains-container {
     width: 98% !important;
   }
