--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,9 @@ body {
 
 
 @media (max-width: 450px) {
+  html {
+    width: 170%;
+  }
   .domains-container {
     width: 98% !important;
   }
@@ -95,7 +98,7 @@ body {
   .heading h3 {
     font-size: 30px;
   }
-  .search-bar, #searchy {
+  #searchy {
     height: 100px !important;
     font-size: 40px !important;
   }
