--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,13 @@ body {
   .domain-container .contact-btn {
     bottom: 42px;
   }
+  .numberOfResults h4 {
+    font-size: 30px;
+    color: grey;
+  }
+  .long-url {
+    font-size: 31px;
+  }
   #searchy {
     height: 100px !important;
     font-size: 40px !important;
