--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,11 @@ body {
   background-image: url('hero.jpeg');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .domain-container {
