--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,10 @@ body {
 }
 
 .main {
-  background-image: url('hero.jpeg');
+  /* background-image: url('hero.jpeg');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
   width: 100%;
   height: 100%;
   padding: 0;
@@ -20,6 +20,7 @@ body {
 .domain-container h3 {
   margin-top: 0;
   margin-bottom: 0;
+  color: white;
 }
 
 .heading {
