--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ body {
   padding: 6px 12px;
   border-radius: 8px;
   border: grey solid 1px;
+  margin-top: 20px;
 }
 
 .container {
@@ -94,6 +95,11 @@ body {
   bottom: 30px;
 }
 
+.heading .contact-btn {
+  top: 22px;
+  font-size: 24px;
+}
+
 .contact-btn:hover {
   background-color: #811b54;
   color: white;
@@ -120,6 +126,9 @@ body {
   .domain-container .contact-btn {
     bottom: 42px;
     right: 0px;
+  }
+  .heading .contact-btn {
+    font-size: 34px;
   }
   .numberOfResults h4 {
     font-size: 30px;
